# wafle-gmail-reader

./: README.md  pyproject.toml
src/waflegmailreader/: __init__.py  __main__.py  gmail_reader.py
tests/: test_gmail_reader.py
